# transmission_curses

./: .gitignore  pyproject.toml  todo.org
transmission_curses/: console.py  data.py  rpc.py  torrent_detail.py  torrent_list.py  util.py
